# secret-scan

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECRET_SCAN_VALIDATION_REPORT.md  correctiveaction.md  debug_entropy.rs  release.toml  secret-scan-test-report.md  tarpaulin.toml
.cargo/: config.toml
.claude/: config.json
.github/workflows/: ci.yml  release.yml
benches/: scanning.rs
coverage/: cobertura.xml
docs/: blog-post-draft.md  demo-script.sh  linkedin-post.md
reports/: swarm-sequential-centralized-1751478716052.json  swarm-sequential-centralized-1751486424926.json
src/: entropy.rs  lib.rs  main.rs  output.rs  patterns.rs  scanner.rs
test-repo/config/: production.yml
test-repo/examples/: example_api.rb
test-repo/src/: config.js  utils.js
test-repo/test/: test_secrets.py
tests/: aws_key_validation_test.rs  entropy_test.rs  integration.rs  memory_test.rs  output_test.rs  pattern_consistency_test.rs  pattern_test.rs  performance_benchmark_test.rs  scanner_test.rs
tests/fixtures/: clean.txt  secrets.txt
tests/fixtures/gitignore_test/: .gitignore  public_config.txt
validation-test/: Cargo.toml  README.md
validation-test/mock-repo/: docker-compose.yml  obfuscated_secrets.txt  test_secrets.py
validation-test/mock-repo/config/: production.yml
validation-test/mock-repo/src/: config.js
validation-test/mock-repo/test/: test_data.js
validation-test/src/: context.rs  entropy.rs  scanner.rs
validation-test/tests/: aws_pattern_fix_test.rs  integration.rs  output_test.rs  performance_benchmark_test.rs  scanner_test.rs
validation-test/tests/fixtures/: secrets.txt
