[package]
name = "secretscanner"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for detecting secrets in codebases"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
ignore = "0.4"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
colored = "2.0"

[dev-dependencies]
tempfile = "3.8"